--- a/Session 6/css/Bai6Basic.css
+++ b/Session 6/css/Bai6Basic.css
@@ -7,4 +7,62 @@
 .thumbnail {
     width: calc(25% - 20px);
     margin-left: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 5px 4px 12px 3px lightgray;
+    display: flex;
+    flex-direction: column;
 }
+.img-product {
+    aspect-ratio: 4/3;
+    object-fit: cover;
+    width: 100%;
+    flex-shrink: 0;
+}
+.content-top {
+    padding: 0 20px;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+.content-top h3 {
+    font-weight: 500;
+    flex: 1;
+    word-break: break-all;
+}
+.content-top .user {
+    display: flex;
+    flex-shrink: 0;
+}
+.content-top .user .avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
+.content-top .user .info ion-icon{
+    color: aquamarine;
+}
+p {font-weight: 100;color: gray;}
+
+.content-bottom {
+    display: flex;
+    border-top: 1px solid gray;
+    justify-content: space-between;
+    padding: 10px 20px;
+    flex-shrink: 0;
+}
+.content-bottom button {
+    background-color: orange;
+    border: none;
+    border-radius: 5px;
+    padding: 0 40px;
+    color: #fff;
+    font-size: 16px;
+}
+
+
+
+
+
+
