--- a/Session 6/css/Bai6Basic.css
+++ b/Session 6/css/Bai6Basic.css
@@ -61,8 +61,18 @@ p {font-weight: 100;color: gray;}
     font-size: 16px;
 }
 
-
-
+/* Responsive */
+@media screen and (max-width: 990px) and (min-width: 768px)
+{
+    .thumbnail {
+        width: calc(50% - 20px);
+    }
+}
+@media screen and (max-width: 768px) {
+    .thumbnail {
+        width: calc(100% - 20px);
+    }
+}
 
 
 
